@@ -21,3 +21,9 @@ drop table p_projectaddress;
 # update : 01/29/2001 #                                                                                                                                                                     
 #######################
 alter table p_projects modify column access varchar(25);
+
+#######################                                                                                                                      
+# update : 02/05/2001 #                                                                                                                      
+#######################
+alter table p_invoicepos modify column invoice_id int(11) NOT NULL;
+alter table p_deliverypos modify column delivery_id int(11) NOT NULL;
